# aws-iot-custom-authorizer-rust

./: .gitignore  README.md  cdk.json  package-lock.json  package.json  result.json  test.json  todo.sh
functions/: .gitignore  Cargo.toml
functions/json/: custom_err.json  env.json  event.json  ext_err.json  panic.json  response.json  simple_err.json  test.json  wrong_type.json
functions/src/: main.rs
lib/: cdkv2-sam-lambda-rust-stack.ts
test/: cdkv2-sam-lambda-rust.test.ts
