[package]
authors = ["Aaron Tsui"]
edition = "2018"
name = "resources"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = "2.1.0"
tokio = {version = "1.17.0", features = ["full"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
