[package]
authors = ["Aaron Tsui"]
edition = "2018"
name = "resources"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
simple-error = "0.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
